# accounting_app

./: README.md  auth.py  database.py  main.py  models.py  pyproject.toml  replit.md
routers/: auth.py  inventory.py  payroll.py  purchases.py  reports.py  sales.py  users.py
static/: app.js  auth.js  components.js  index.html  inventory.js  payroll.js  purchases.js  reports.js  sales.js  users.js
